# tinyc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  arena.c  build.sh  c-source.c  c.c  cc.c  cc.h  datatype.c  debug.c  debug.inl  error.c  filecache.c  grammar.txt  hello.c  lexer.c  list.c  main.c  map.c  memory.c  node.inl  parser.c  pp.sh  preproc.c  preprocessor.c  run-test.sh  run-unit-test.sh  self-hosting.c  self.c  string_util.c  token.c  token.inl
asm/: hello.asm
dead/: CMakeLists.txt  README.md  backus-naur.txt  run-tests.sh
dead/code/: CMakeLists.txt  codegen.c  datatype.c  error.c  filecache.c  main.c  misc.c  parser.c  preprocessor.c  setup.c  tokenizer.c  toyc.h  utility.c  validation.c
dead/code/containers/: config.h  dict_decl.h  dict_impl.h  list_decl.h  list_impl.h
dead/test/compiler/: address.c  array.c  branch.c  function.c  loop.c  operator.c  scope.c
dead/test/invalid/: assign_to_rvalue.c  break_outside_loop.c  invalid_directive.c  invalid_op.c  no_cond.c  no_semi.c  redefinition.c  stary.c  undefined.c
dead/test/leetcode/: palindrome-number.c  reverse-integer.c  two-sum.c
dead/test/unit/: CMakeLists.txt  dict.test.c  list.test.c  (+1 more)
include/: stdarg.h  stdio.h  stdlib.h  string.h
src/: CMakeLists.txt  cc.hpp  debug.cpp  error.cpp  filecache.cpp  lexer.cpp  main.cpp  token.cpp  token.inl
test/: args.c  arith.c  basic.c  branch.c  cast.c  enum.c  fib.c  global.c  h.h  hello.c  lexer.c  loop.c  scope.c
unit/: CMakeLists.txt  list.test.c  list.test.cpp  map.test.cpp  string_util.test.c  string_util.test.cpp  unit.h
